src/test/error/list.lns
{
    foreach val in [ 1, 2, 3 ] {
        let val2:int = val;
    }
}   
{
    foreach val in [ 1, 2, 3, 4.0 ] {
        let val2:int = val; // error
    }
}   
{
    foreach val in [ 1, 2, 3, 4.0 ] {
        let val2:stem = val;
    }
}   
{
    foreach val in [ 1, 2, 3, nil ] {
        let val2:int = val; // error
    }
}   
{
    foreach val in [ 1, 2, 3, nil ] {
        let val2:int! = val;
    }
}   
{
   let mut val:int![] = [];
   val.insert( 1 );
   val.insert( nil ); // error
   val.insert( "a" ); // error
   val.remove(##);    // warn
}
{
   let val:int![] = [];
   val.insert( 1 ); // error
   val.remove( 1 ); // error
}

{
   let list1 = [ 1, 4, 5, 3, 2 ];
   list1.sort( fn ( val1:int, val2:int ) : bool { return val1 > val2; } ); // error
   let mut list2 = [ 1, 4, 5, 3, 2 ];
   list2.sort( fn ( val1:real, val2:int ) : bool { return val1 > val2; } ); // error
   list2.sort( fn ( val1:int, val2:real ) : bool { return val1 > val2; } ); // error
   list2.sort( fn ( val1:int, val2:int ) : int { return val1; } ); // error
   list2.sort( fn ( val1:int, val2:int, val3:int ) : bool { return val1 > val2; } ); // error
}
{
   let list:List<int>! = nil;
   let list2:List<int> = [] or [];
   let list3:List<int> = [] or list; // error
   let list4:List<int> = list or [];
   let list5:List<int> = list or list; // error
}
{
   class Super {
   }
   class Sub extend Super {
   }

   let mut work:List<Sub> = [];

   {
      fn func( list:List<Super> ) {
      }
      func( work ); // error
   }
   {
      fn func( list:List<&Super> ) {
         list.insert( new Super() );
      }
      func( work ); // error
   }
   {
      fn func( list:&List<Super> ) {
      }
      func( work );
   }
   {
      fn func( list:List<Sub> ) {
      }
      func( work );
   }
}
{
   let val = 1;
   let list:List<val> = []; // error
}
{
   interface Imp {
      pub fn func() mut;
   }
   class Hoge extend (Imp) {
      pub fn func() mut{
      }
   }
   class Foo extend (Imp) {
      pub fn func() mut{
      }
   }
   let hoge = new Hoge();
   let foo = new Foo();
   foreach item in [ hoge, foo ] {
      item.func(); // error
   }
   foreach item in [ new Hoge(), foo ] {
      item.func(); // error
   }
   foreach item in [ hoge, new Foo() ] {
      item.func(); // error
   }
   foreach item in [ new Hoge(), new Foo() ] {
      item.func();
   }
}
{
   abstract class Imp {
      pub abstract fn func() mut;
   }
   class Hoge extend Imp {
      pub override fn func() mut{
      }
   }
   class Foo extend Imp {
      pub override fn func() mut{
      }
   }
   let hoge = new Hoge();
   let foo = new Foo();
   foreach item in [ hoge, foo ] {
      item.func(); // error
   }
   foreach item in [ new Hoge(), foo ] {
      item.func(); // error
   }
   foreach item in [ hoge, new Foo() ] {
      item.func(); // error
   }
   foreach item in [ new Hoge(), new Foo() ] {
      item.func();
   }
}
{
   interface IF1 {
      pub fn func();
   }
   interface IF2 {
      pub fn func();
   }

   class Hoge1 extend (IF1,IF2) {
      pub fn func() {
      }
   }
   class Hoge2 extend (IF1,IF2) {
      pub fn func() {
      }
   }
   class Hoge3 extend (IF1) {
      pub fn func() {
      }
   }
   let list = [ new Hoge1(), new Hoge2(), new Hoge3() ];
   foreach item in list {
      item.func();
   }
}